First and second point of D56 are ready
